Delete deprecated JVM parameter